<resources>
    <string name="app_name">PUNC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scheduleFull"><b>Friday, Nov. 3</b>
        \n12:00 pm – 4:00 pm  \t\tRegistration at the Atherton
        \n3:00 pm  – 4:00 pm	   \t\tOpening Ceremonies
        \n4:30 pm  – 6:30 pm	   \t\tCommittee Session I
        \n6:30 pm  – 8:00 pm	   \t\tBreak
        \n8:00 pm  – 9:00 pm	   \t\tAdvisor Meeting
        \n8:00 pm  – 10:00 pm  \t\tCommittee Session II

        \n\n<b>Saturday, Nov. 4</b>
        \n9:30 am  – 12:00 pm  \t\tCommittee Session III
        \n12:00 pm – 2:00 pm	   \t\tLunch Break
        \n2:00 pm  – 4:30 pm   \t\tCommittee Session IV
        \n4:30 pm  – 6:30 pm	   \t\tDinner
        \n6:30 pm  – 9:00 pm	   \t\tCommittee Session V
        \n7:00 pm  - 8:00 pm   \t\tAdvisor Meeting
        \n10:00 pm – 12:00 am  \t\tDelegate Social

        \n\n<b>Sunday, Nov. 5</b>
        \n9:30 am – 11:30 am	  \t\tCommittee Session VI
        \n12:30 pm – 1:30 pm	  \t\tClosing Ceremonies

    </string>
    <string name="scheduleRow1">Friday, Nov. 3
    \n12:00 pm – 4:00 pm
    \n3:00 pm – 4:00 pm
    \n4:30 pm – 6:30 pm
    \n6:30 pm – 8:00 pm
    \n8:00 pm – 9:00 pm
    \n8:00 pm – 10:00 pm
    </string>
    <string name="tabFood">Food</string>
    <string name="tabCoffee">Coffee</string>
    <string name="tabBars">Bars</string>
    <string name="sgInfo">
        <b>Kayla Wendt</b>
        \n<i>Secretary General</i>
    </string>
    <string name="sgEmail">
        sg.punc@psiada.org
    </string>
    <string name="sgPhone">
        484-868-7195
    </string>
    <string name="cosInfo">
        <b>Mihir Alve</b>
        \n<i>Chief of Staff</i>
    </string>
    <string name="cosEmail">
        cos.punc@psiada.org
    </string>
    <string name="cosPhone">
        484-868-5778
    </string>
    <string name="usgInfo">
        <b>Allison Brown</b>
        \n<i>USG for Crisis and Committee Development</i>
    </string>
    <string name="usgEmail">
        crisis.punc@psiada.org
    </string>
    <string name="usgPhone">
        610-291-7620
    </string>
    <string name="chargeInfo">
        <b>Tarrick Qahash</b>
        \n<i>Chargée d\'Affaires</i>
    </string>
    <string name="chargeEmail">
        charge.punc@psiada.org
    </string>
    <string name="chargePhone">
        215-622-1737
    </string>
    <string name="menu1">
        <a href="https://goo.gl/maps/ffQeJwYN2tH2">
        <b>India Pavilion</b> ($) <i>Indian</i>
        222 E Calder Way
        </a>

    </string>
    <string name="menu2">
        <a href="https://goo.gl/maps/AjWY4baa3Tz">
        <b>Pita Cabana</b> ($) <i>Middle Eastern</i>
        334 E Calder Way
        </a>
    </string>
    <string name="menu3">
        <a href="https://goo.gl/maps/yaVAn26TgAQ2">
        <b>Yallah Taco</b> ($) <i>Mexican</i>
        217 McAllister Alley
        </a>
    </string>
    <string name="menu4">
        <a href="https://goo.gl/maps/jgdCBbGensD2">
        <b>Cozy Thai</b> ($$) <i>Thai</i>
        232 S. Allen Street
        </a>
    </string>
    <string name="menu20">
        <a href="https://goo.gl/maps/VG4RM5JQ3Ft">
        <b>Snap Pizza</b> ($) <i>Pizza</i>
        110 E College Ave
        </a>
    </string>
    <string name="menu5">
        <a href="https://goo.gl/maps/VSgmQsSmMiG2">
        <b>Irving’s Bagels</b> ($) <i>Bagels, Sandwiches</i>
        110 E College Ave
        </a>
    </string>
    <string name="menu6">
        <a href="https://goo.gl/maps/n4e5QDVfMir">
        <b>Fiddlehead</b> ($) <i>Salads</i>
        134 W College Ave
        </a>
    </string>
    <string name="menu7">
        <a href="https://goo.gl/maps/zuCgvtysfuJ2">
        <b>Bagel Crust</b> ($) <i>Bagels, Sandwiches</i>
        332 E Calder Way
        </a>
    </string>
    <string name="menu8">
        <a href="https://goo.gl/maps/fsmPxsKVVYu">
        <b>Little Szechuan</b> ($) <i>Chinese</i>
        228 W College Ave
        </a>
    </string>
    <string name="menu9">
        <a href="https://goo.gl/maps/dfig5Bd6PVy">
        <b>The Corner Room</b> ($$) <i>American</i>
        100 W. College Avenue
        </a>
    </string>
    <string name="menu10">
        <a href="https://goo.gl/maps/Autkdsh663v">
        <b>Chipotle</b> ($) <i>Mexican</i>
        116 Heister Street
        </a>
    </string>
    <string name="menu11">
        <a href="https://goo.gl/maps/n7uhDseURqp">
        <b>Pho 11</b> ($) <i>Vietnamese</i>
        146 N Atherton St
        </a>
    </string>
    <string name="menu12">
        <a href="https://goo.gl/maps/zHJP8viPUgA2">
        <b>The Deli</b> ($$) <i>Pizza, Sandwiches</i>
        113 Heister Street
        </a>
    </string>
    <string name="menu13">
        <a href="https://goo.gl/maps/Nzw9SiPaX8k">
        <b>Big Bowl Noodle House</b> ($) <i>Chinese</i>
        418 E College Ave\n
        *Cash Only
        </a>
    </string>
    <string name="menu14">
        <a href="https://goo.gl/maps/79LaYxjZ2QN2">
        <b>Baby’s Burgers &amp; Shakes</b> ($) <i>Diner</i>
        131 S Garner St
        </a>
    </string>
    <string name="menu15">
        <a href="https://goo.gl/maps/qGZTgz2SSh92">
        <b>Green Bowl</b> ($$) <i>Asian Fusion, Chinese, Salads</i>
        131 W. Beaver Avenue
        </a>
    </string>
    <string name="menu16">
        <a href="https://goo.gl/maps/jsuYHUjKTm22">
        <b>Underground Burgers &amp; Crepes</b> ($) <i>Burgers, Crepes</i>
        218 E Calder Way
        </a>
    </string>
    <string name="menu17">
        <a href="https://goo.gl/maps/Pm9Vadd1NXy">
        <b>Galanga</b> ($$) <i>Thai</i>
        454 E. College Avenue
        </a>
    </string>
    <string name="menu18">
        <a href="https://goo.gl/maps/oWTtMCHouHP2">
        <b>The Tavern</b> ($$) <i>American</i>
        220 E. College Avenue
        </a>
    </string>
    <string name="ActualMenu1">
        <a href="http://www.indiapavilion.net/menu.html">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu2">
        <a href="https://www.beyondmenu.com/31666/state-college/pita-cabana-grill-state-college-16801.aspx#all-day-menu">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu3">
        <a href="https://www.grubhub.com/restaurant/yallah-taco-217-mcallister-bldg-state-college/478422">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu4">
        <a href="https://www.cozythaibistro.com/menu">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu20">
        <a href="https://www.snapcustompizza.com/location/state-college/">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu5">
        <a href="http://www.irvingsstatecollege.com/instore-menu/">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu6">
        <a href="http://www.fiddleheadstatecollege.com/#menu">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu7">
        <a href="https://squareup.com/store/bagel-crust-2">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu8">
        <a href="https://eatstreet.com/state-college-pa/restaurants/little-szechuan-state-college">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu9">
        <a href="https://www.cornerroom.com/">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu10">
        <a href="https://www.chipotle.com/menu">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu11">
        <a href="http://pho11.net/">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu12">
        <a href="https://www.allmenus.com/pa/state-college/280614-deli-restaurant/menu/">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu13">
        <a href="http://places.singleplatform.com/big-bowl-noodle-house-2/menu">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu14">
        <a href="http://places.singleplatform.com/babys-burgers--shakes/menu">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu15">
        <a href="https://www.statecollege.com/dining/6361/green-bowl/">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu16">
        <a href="http://places.singleplatform.com/underground-burgers--crepes-0/menu?ref=google">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu17">
        <a href="https://foursquare.com/v/galanga-by-cozy-thai/4e09102fd1640223a4a655dd/menu">
        <b>Menu</b>
        </a>
    </string>
    <string name="ActualMenu18">
        <a href="http://thetavern.com/weekend-menu/#">
        <b>Menu</b>
        </a>
    </string>
    <string name="coffee1">
        <a href="https://goo.gl/maps/wb52RKH3dY12">
        <b>Au Bon Pain</b>
        220 E. College Avenue
        </a>
    </string>
    <string name="roomAssignments">
        <a href="http://phunc.psiada.org/rooms/">View Room Assignments</a>
    </string>
    <string name="cafe1">
        <a href="https://goo.gl/maps/dGMk6o1vcHm">
        <b> Saxbys</b>
        Business Building, 210
        </a>
    </string>
    <string name="cafe2">
        <a href="https://goo.gl/maps/xiKUQJo3QnQ2">
        <b> Penn State Creamery</b>
        Food Science Building
        </a>
    </string>
    <string name="cafe3a">
        <a href="https://goo.gl/maps/z6CDyDQsQTF2">
        <b> Starbucks</b>
        HUB
        </a>
    </string>
    <string name="cafe3b">
        <a href="https://goo.gl/maps/Ks75XQwY1TD2">
        <b> Starbucks</b>
        232 W College Ave
        </a>
    </string>
    <string name="cafe3c">
        <a href="https://goo.gl/maps/ocg4f5PVvPB2">
        <b> Starbucks</b>
        E, 126 Paterno Library
        </a>
    </string>
    <string name="cafe4a">
        <a href="https://goo.gl/maps/UgbprziLYfG2">
        <b>Au Bon Pain</b>
        Kern Building
        </a>
    </string>
    <string name="cafe4b">
        <a href="https://goo.gl/maps/TSz2VhTWfKp">
        <b>Au Bon Pain</b>
        Information Sciences and Technology Buidling
        </a>
    </string>
    <string name="cafe5">
        <a href="https://goo.gl/maps/WVVBSx95Zek">
        <b> Dunkin Donuts</b>
        200 W College Ave
        </a>
    </string>
    <string name="cafe6">
        <a href="https://goo.gl/maps/RHzwpDGCE7S2">
        <b> Irving’s Bagels</b>
        110 E College Ave
        </a>
    </string>
    <string name="cafe7">
        <a href="https://goo.gl/maps/XnnntWPmTQm">
        <b> Saint’s Cafe</b>
        123 W Beaver Ave
        </a>
    </string>
    <string name="cafe8">
        <a href="https://goo.gl/maps/8LegtvWLsg12">
        <b> Duck Donuts</b>
        125 S Fraser St
        </a>
    </string>
    <string name="cafe9">
        <a href="https://goo.gl/maps/Wg3YQ9JeU772">
        <b> Panera Bread</b>
        148 S Allen St
        </a>
    </string>
    <string name="cafe10">
        <a href="https://goo.gl/maps/wNjCUdNPxAm">
        <b> Webster’s Bookstore Cafe</b>
        133 E Beaver Ave
        </a>
    </string>
    <string name="cafe11">
        <a href="https://goo.gl/maps/GLiDpFxjeMs">
        <b> Sowers Harvest Café</b>
        421 E Beaver Ave
        </a>
    </string>
    <string name="cafe12">
        <a href="https://goo.gl/maps/YeJapfc1aJ42">
        <b> Abba Java Coffee House</b>
        299 Locust Ln
        </a>
    </string>
    <string name="cafe13">
        <a href="https://goo.gl/maps/SD8VivhbwGE2">
        <b> Cheese Shoppe</b>
        234 E Calder Way
        </a>
    </string>
</resources>