<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top" >

            <android.support.design.widget.TabItem
                android:text="@string/tabFood"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <android.support.design.widget.TabItem
                android:text="@string/tabCoffee"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <android.support.design.widget.TabItem
                android:text="@string/tabBars"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>



        </android.support.design.widget.TabLayout>


    </android.support.v4.view.ViewPager>

</RelativeLayout>